--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,14 +4,17 @@ on:
   workflow_dispatch:
     inputs:
       release_tag:
-        description: 'Tag for the release (e.g., v1.0.0)'
+        description: 'Tag for the release'
         required: true
       release_name:
-        description: 'Name of the release (optional)'
+        description: 'Name of the release'
         required: true
       release_body:
         description: 'Description/body of the release (optional)'
         required: false
+
+permissions:
+  contents: write  # ← This line is essential to allow creating releases
 
 jobs:
   build-release:
