--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.event.inputs.release_tag }}
-        name: ${{ github.event.inputs.release_name || format('Release {0}', github.event.inputs.release_tag) }}
+        name: format('Release {0}', github.event.inputs.release_tag) }}
         body: ${{ github.event.inputs.release_body }}
         files: ${{ env.ZIP_NAME }}
       env:
