--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,12 +43,19 @@ jobs:
         cd release
         zip -r ../$ZIP_NAME .
 
+    - name: Read changelog for release body
+      id: changelog
+      run: |
+        echo "body<<EOF" >> $GITHUB_ENV
+        cat changelog.md >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV
+
     - name: Create GitHub release
       uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.event.inputs.release_tag }}
         name: ${{ format('Release {0}', github.event.inputs.release_tag) }}
-        body: ${{ github.event.inputs.release_body }}
+        body: ${{ env.body }}
         files: ${{ env.ZIP_NAME }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
